# python-develop-template

./: LICENSE  README.md  devel-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: app.py  container.py  containers.py  main.py  writer.py
src/business_logics/: github_user_info_extractor.py
src/dto/: github_user_info_dto.py
src/repositories/: giithub_user_repository.py  github_user_repository.py
src/use_cases/: github_user_interactor.py
test/: test_main.py  test_sample.py
