[tool.poetry]
name = "python-develop-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_develop_template"}]

[tool.poetry.dependencies]
python = "^3.10"
dependency-injector = "^4.41.0"
requests = "^2.30.0"
dataclasses-json = "^0.5.7"


[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10.0"
pydocstyle = "^6.3.0"
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
