[tool.poetry]
name = "python-develop-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_develop_template"}]

[tool.poetry.dependencies]
python = "^3.10"
dependency-injector = "^4.41.0"
requests = "^2.30.0"
dataclasses-json = "^0.5.7"
flake8 = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "__pycache__",]
max-complexity = 10

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.black]
line-length = 100
